fix bugs in users and send